--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
     "cookie": "^1.0.2",
     "next": "14.2.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwind": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
