--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# ide
+.idea/
+.vscode/
+
 # dependencies
 /node_modules
 /.pnp
@@ -14,8 +18,9 @@
 /coverage
 
 # next.js
-/.next/
+/.next/*
 /out/
+frontend/.next/*
 
 # production
 /build
@@ -31,7 +36,7 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # env files (can opt-in for committing if needed)
-.env*
+.env
 
 # vercel
 .vercel
